@@ -1,3 +1,7 @@
+2012-06-04  Jesse Kornblum  <research@jessekornblum.com>:
+
+	* src/hashlist.cpp: Formatting. Addressed bug with filenames with commas in them.
+
 2012-05-20  Jesse Kornblum  <research@jessekornblum.com>:
 
 	* man/md5deep1,hashdeep.1: Fixed typo in -j mode
